src/objects/Album__c.object
<CustomObject>
    <fields>
        <fullName>Cover_Photo__c</fullName>
        <label>Cover Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Genre</label>
        <referenceTo>Genre__c</referenceTo>
        <relationshipLabel>Albums</relationshipLabel>
        <relationshipName>Albums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>Users</label>
        <referenceTo>Users__c</referenceTo>
        <relationshipLabel>Albums</relationshipLabel>
        <relationshipName>Albums</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>YouTube_id__c</fullName>
        <label>YouTube id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Album</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Album Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Albums</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>